--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-dom": "^16.4.1",
     "react-native-public-ip": "^1.0.0",
     "react-popout": "^1.0.1",
+    "react-popup": "^0.9.3",
     "react-redux": "^5.0.7",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
