--- a/package.json
+++ b/package.json
@@ -6,12 +6,14 @@
     "fixed-data-table": "^0.6.5",
     "isemail": "^3.1.2",
     "jquery": "^3.3.1",
+    "moment": "^2.22.2",
     "npm": "^6.1.0",
     "password-hash": "^1.2.2",
     "prop-types": "^15.6.2",
     "react": "^16.4.1",
     "react-bootstrap": "^0.32.1",
     "react-data-components": "^1.2.0",
+    "react-datepicker": "^1.5.0",
     "react-device-detect": "^1.5.7",
     "react-dom": "^16.4.1",
     "react-loader-spinner": "^2.1.0",
