--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "dependencies": {
     "fixed-data-table": "^0.6.5",
-    "jquery": "^3.3.1",
+    "jquery": "^3.3.1",   
     "npm": "^6.1.0",
     "password-hash": "^1.2.2",
     "react": "^16.4.1",
@@ -20,6 +20,7 @@
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.4",
     "react-table": "^6.8.6",
+    "reactjs-popup": "^1.1.1",
     "reactstrap": "^6.1.0",
     "redux": "^4.0.0"
   },
