--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
     "react-datepicker": "^1.5.0",
     "react-device-detect": "^1.5.7",
     "react-dom": "^16.4.1",
+    "react-image-slider": "^0.1.0",
     "react-loader-spinner": "^2.1.0",
+    "react-modal": "^3.5.1",
+    "react-modal-dialog": "^4.0.7",
     "react-native-public-ip": "^1.0.0",
     "react-popout": "^1.0.1",
     "react-popup": "^0.9.3",
